# ET-Formula-Comparison

./: README.md
Liu_2023_PET/: LICENSE  README.md  pyproject.toml  test_functionality.py
Liu_2023_PET/examples/: run_quick_demo.py
Liu_2023_PET/src/ep_veg/: __init__.py  budyko.py  gs.py  parameters.py  pm.py  utils.py
Liu_2023_PET/tests/: test_basic.py
Pimentel_2023_WRR/: CITATION.cff  LICENSE  README.md  pyproject.toml
Pimentel_2023_WRR/examples/: run_quickstart.py
Pimentel_2023_WRR/scripts/: petlab_cli.py
Pimentel_2023_WRR/src/petlab/: __init__.py  analysis.py  budyko.py  formulas.py  metrics.py  plotting.py  radiation.py  synthetic.py
Pimentel_2023_WRR/tests/: test_formulas.py
Wang_2025_PET_Paradox/: .gitignore  LICENSE  README.md  pyproject.toml
Wang_2025_PET_Paradox/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Wang_2025_PET_Paradox/scripts/: generate_synthetic.py  reproduce_figures.py  test_functionality.py
Wang_2025_PET_Paradox/src/paradoxes_pet/: __init__.py  data.py  indices.py  pet.py  plotting.py
Xiong_PDSI_025/: CITATION.cff  README.md  pyproject.toml
Xiong_PDSI_025/examples/: 01_quickstart_synthetic.py  02_spatial_timeseries_and_trends.py  run_all_examples.py
Xiong_PDSI_025/pdsi_cmip6/: __init__.py  ep.py  fonts.py  metrics.py  pdsi.py  plotting.py
Xiong_PDSI_025/tests/: test_ep.py  test_pdsi.py
Yang_2018_NCC/: .gitignore  CITATION.cff  README.md  pyproject.toml
Yang_2018_NCC/examples/: 01_synthetic_timeseries.py  02_compare_EP_methods.py  03_budyko_runoff_demo.py  _font_helper.py
Yang_2018_NCC/src/hydro_co2/: attribution.py  budyko.py  penman.py  rs_co2.py
Yang_2018_NCC/tests/: test_basic.py
Yin_GRL_2025/: LICENSE  README.md  pyproject.toml  requirements.txt
Yin_GRL_2025/examples/: example_esms_projection_mock.py  example_synthetic_global.py  example_validate_power_law_tail.py
Yin_GRL_2025/src/di_global/: compute.py  datasets.py  plots.py  theory.py  utils_fonts.py
Yin_GRL_2025/tests/: test_theory.py
examples/: advanced_spatial_analysis.py
ideas/: 陆地蒸散发（ET）与潜在蒸散发（PET）估算方法与数据产品综述 (2015–2025).docx  陆面蒸散发算法综合评估.md
pet_comparison/: __init__.py
pet_comparison/analysis/: comparison.py
pet_comparison/formulas/: __init__.py  penman_monteith.py  penman_monteith_jarvis.py  penman_monteith_veg.py  radiation_based.py  temperature_based.py
pet_comparison/utils/: constants.py  meteorology.py
py_et_lib/models/: aet.py  energy_balance.py  penman_monteith.py  priestley_taylor.py
tests/: test_formulas.py
