[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydro-co2"
version = "0.1.0"
description = "Replica of Yang et al. (2018) key hydrologic formulas with [CO2] effect on Penman–Monteith, plus Budyko and attribution demos."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name="HydroX Lab (replica)", email="hydrox.example@scut.edu.cn"}
]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://example.com"
