[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "di-global-aridity"
version = "0.1.0"
authors = [{name="di-global-aridity contributors"}]
description = "Recreate the global dryness index distribution with synthetic examples"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
